# rust-cbor

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
cbor2-derive/: Cargo.toml
cbor2-derive/src/: lib.rs
cbor_conv/: Cargo.toml
cbor_conv/src/: cbor2json.rs  json2cbor.rs
src/: de.rs  diag.rs  lib.rs  ser.rs  tag.rs
src/value/: canonical.rs  de.rs  mod.rs  ser.rs
tests/it/: canonical.rs  cose.rs  de_edge.rs  diag.rs  errors.rs  int_keys.rs  limits.rs  main.rs  rfc8949.rs  roundtrip.rs  size.rs  tag.rs  validate.rs  value.rs  value_api.rs  value_serde.rs
