[package]
name = "cbor2-derive"
version = "0.5.0"  #:version
authors = [
    "Andrew Gallant <jamslam@gmail.com>",
    "0xZensh <txr1883@gmail.com>",
]
description = "Attribute macro for integer map keys (COSE) with the cbor2 crate."
homepage = "https://github.com/ldclabs/rust-cbor"
repository = "https://github.com/ldclabs/rust-cbor"
keywords = ["cbor", "serde", "cose", "derive"]
categories = ["encoding"]
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
